add style commit

--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=100%, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/animation.css">
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/about.css">
 </head>
 <body>
     <header>
@@ -26,7 +28,9 @@
         </button>
     </section>
     <section class="img">
-        <img class="interior-img" src="./img/interior.jpg" alt="인테리어사진">
+        <div class="img-in-div">
+            <img class="interior-img" src="./img/interior.jpg" alt="인테리어사진">
+        </div>
     </section>
     <footer>
         <div>
