--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=100%, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/animation.css">
-    <link rel="stylesheet" href="./css/main.css" />
     <link rel="stylesheet" href="./css/about.css">
+    <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
     <header>
@@ -20,12 +20,15 @@
         <button class="project" type="button">
             Projects
         </button>
-        <button class="contact" type="button">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScwzsMqtgU8K8y_o0lbNg2MxP-iuHDcItIxBNPOfoFtVqLg7g/viewform">Contact</a>
+        <button class="contact" type="button">Contact
         </button>
         <button class="blog" type="button">
             <a href="https://blog.naver.com/pentable_">Blog</a>
         </button>
+        <button class="estimate" type="button">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLScwzsMqtgU8K8y_o0lbNg2MxP-iuHDcItIxBNPOfoFtVqLg7g/viewform">Estimate</a>
+        </button>
+  
     </section>
     <section class="img">
         <div class="img-in-div">
