mobile version commit

--- a/index.html
+++ b/index.html
@@ -5,41 +5,45 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
     <meta name="viewport" content="width=100%, initial-scale=1.0" />
     <title>Document</title>
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="./css/animation.css">
     <link rel="stylesheet" href="./css/about.css">
     <link rel="stylesheet" href="./css/main.css" />
 </head>
 <body>
-    <header>
-        <img src="./img/LOGO.jpg" alt="">
-    </header>
-    <section class="menu-buttons" >
-        <button class="about" type="button"> 
-            About
-        </button>
-        <button class="project" type="button">
-            Projects
-        </button>
-        <button class="contact" type="button">Contact
-        </button>
-        <button class="blog" type="button">
-            <a href="https://blog.naver.com/pentable_">Blog</a>
-        </button>
-        <button class="estimate" type="button">
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScwzsMqtgU8K8y_o0lbNg2MxP-iuHDcItIxBNPOfoFtVqLg7g/viewform">Estimate</a>
-        </button>
-  
-    </section>
-    <section class="img">
-        <div class="img-in-div">
-            <img class="interior-img" src="./img/interior.jpg" alt="인테리어사진">
-        </div>
-    </section>
-    <footer>
-        <div>
-            Copyright @2022 pentable All Right Reserved
-        </div>
-    </footer>
+
+        <header>
+            <img src="./img/LOGO.jpg" alt="">
+        </header>
+        <section class="menu-buttons" >
+            <button class="about" type="button">
+                About
+            </button>
+            <button class="project" type="button">
+                Projects
+            </button>
+            <button class="contact" type="button">Contact
+            </button>
+            <button class="blog" type="button">
+                <a href="https://blog.naver.com/pentable_">Blog</a>
+            </button>
+            <button class="estimate" type="button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLScwzsMqtgU8K8y_o0lbNg2MxP-iuHDcItIxBNPOfoFtVqLg7g/viewform">Estimate</a>
+            </button>
+        </section>
+        <section class="img">
+            <div class="img-in-div">
+                <img class="interior-img" src="./img/interior.jpg" alt="인테리어사진">
+            </div>
+        </section>
+        <footer>
+            <div>
+                Copyright @2022 pentable All Right Reserved
+            </div>
+        </footer>
+
+    
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
     <script src="about.js"></script>
 </body>
 </html>
