--- a/index.html
+++ b/index.html
@@ -34,6 +34,22 @@
         <section class="img">
             <div class="img-in-div">
                 <img class="interior-img" src="./img/interior.jpg" alt="인테리어사진">
+                <div class="greeting">
+                    안녕하세요. 펜테이블 디자인입니다.<br>
+                    펜테이블은 라이프스타일에 맞는 레이아웃과 디자인으로 <br>
+                    매일 업그레이드하는 인테리어 디자인 그룹입니다. <br><br>
+                    고객님과 소통하여 가장 좋은 레이아웃을 만들고, <br>
+                    펜테이블의 감각적인 디자인과 꼼꼼한 시공을 통해 맞춤형 공간을 <br>서비스합니다.<br><br>
+                    실내디자인학과 석사를 졸업한 대표 디자이너와 <br>
+                    현장 경력 10년 이상의 시공 팀장이 한 팀으로 현장을 작업하여 완성도 높은 공간을 구현합니다.<br><br>
+                    공사지역: 서울, 경기
+                </div>
+                <div class="contact-info">
+                    INTERIOR DESIGN STUDIO <br>
+                    H.P. 010-5605-7790<br>
+                    인스타 @pentable_design<br>
+                    서울특별시 서초구 방배동 2762-22 2호
+                </div>
             </div>
         </section>
         <footer>
@@ -44,6 +60,8 @@
 
     
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
-    <script src="about.js"></script>
+    <script src="./js/about.js"></script>
+    <script src="./js/contact.js"></script>
+    <script src="./js/buttons.js"></script>
 </body>
 </html>
